--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Salesforce Campaign Estimator</title>
+  <title>Campaign Estimator</title>
  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f7f9;
+      margin: 0;
+      padding: 20px;">
   <div class="container">
-    <h1>Salesforce Campaign Estimator</h1>
+    <h1>Martech Campaign Estimator</h1>
     <div class="section-title"><u>Campaign Complexity Matrix</u></div>
     <div>
       <table>
