--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 20px;">
   <div class="container">
-    <h1>Martech Campaign Estimator</h1>
+    <h1>Campaign Estimator</h1>
     <div class="section-title"><u>Campaign Complexity Matrix</u></div>
     <div>
       <table>
