--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       background-color: #f4f7f9;
       margin: 0;
       padding: 20px;">
+  <div id="app" style="display: none;">
   <div class="container">
     <h1>Campaign Estimator</h1>
     <div class="section-title"><u>Campaign Complexity Matrix</u></div>
@@ -86,6 +87,7 @@
         </table>
       </div>
  </div>
+  </div>
  <script src="script.js" defer></script>
 </body>
 </html>
