--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
         </table>
       </div>
  </div>
+  <!-- Email Modal -->
+<div id="emailModal" class="modal">
+  <div class="modal-content">
+    <h2>Email Authentication</h2>
+    <input type="email" id="emailInput" placeholder="Enter your email" />
+    <button onclick="validateEmail()">Submit</button>
+    <p id="emailError" class="error hidden">Unauthorized email address.</p>
+  </div>
+</div>
+
  <script src="script.js" defer></script>
 </body>
 </html>
