--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
   
 
-  <div id="popup" class="popup hidden">
+  <div id="popup" class="popup">
       <div class="popup-content">
         <span class="close-btn" onclick="togglePopup()">&times;</span>
         <h3>Effort Allocation by Campaign Type (In Hours)</h3>
